--- a/portfolio.html
+++ b/portfolio.html
@@ -27,15 +27,15 @@
       <section>
         <h2>Наші роботи</h2>
         <ul>
-          <li><button>Усі</button></li>
-          <li><button>Веб-сайти</button></li>
-          <li><button>Додатки</button></li>
-          <li><button>Дизайн</button></li>
-          <li><button>Маркетинг</button></li>
+          <li><button type="button">Усі</button></li>
+          <li><button type="button">Веб-сайти</button></li>
+          <li><button type="button">Додатки</button></li>
+          <li><button type="button">Дизайн</button></li>
+          <li><button type="button">Маркетинг</button></li>
         </ul>
         <ul>
           <li>
-            <img src="images/tekhnocrack.jpg" alt="Ноутбук" />
+            <img src="images/tekhnocrack.jpg" alt="Ноутбук" width="370" />
             <h3>Технокряк</h3>
             <p>Веб-сайт</p>
           </li>
@@ -43,42 +43,55 @@
             <img
               src="images/New-Orlean-vs-Golden-Star.jpg"
               alt="Два баскетболіста"
+              width="370"
             />
             <h3>Постер New Orlean vs Golden Star</h3>
             <p>Дизайн</p>
           </li>
           <li>
-            <img src="images/Seafood.jpg" alt="Риба і надпис" />
+            <img src="images/Seafood.jpg" alt="Риба і надпис" width="370" />
             <h3>Ресторан Seafood</h3>
             <p>Додаток</p>
           </li>
           <li>
-            <img src="images/Prime.jpg" alt="Навушники" />
+            <img src="images/Prime.jpg" alt="Навушники" width="370" />
             <h3>Проєкт Prime</h3>
             <p>Маркетинг</p>
           </li>
           <li>
-            <img src="images/Boxes.jpg" alt="Дві коробки" />
+            <img src="images/Boxes.jpg" alt="Дві коробки" width="370" />
             <h3>Проєкт Boxes</h3>
             <p>Додаток</p>
           </li>
           <li>
-            <img src="images/Inspiration-has-no-Borders.jpg" alt="Монітор" />
+            <img
+              src="images/Inspiration-has-no-Borders.jpg"
+              alt="Монітор"
+              width="370"
+            />
             <h3>Inspiration has no Borders</h3>
             <p>Веб-сайт</p>
           </li>
           <li>
-            <img src="images/Limited-Edition.jpg" alt="Розгорнута книга" />
+            <img
+              src="images/Limited-Edition.jpg"
+              alt="Розгорнута книга"
+              width="370"
+            />
             <h3>Видання Limited Edition</h3>
             <p>Дизайн</p>
           </li>
           <li>
-            <img src="images/LAB.jpg" alt="Бірка з написом" />
+            <img src="images/LAB.jpg" alt="Бірка з написом" width="370" />
             <h3>Проєкт LAB</h3>
             <p>Маркетинг</p>
           </li>
           <li>
-            <img src="images/Growing-Business.jpg" alt="Робота за ноутбуком" />
+            <img
+              src="images/Growing-Business.jpg"
+              alt="Робота за ноутбуком"
+              width="370"
+            />
             <h3>Growing Business</h3>
             <p>Додаток</p>
           </li>
