--- a/index.html
+++ b/index.html
@@ -5,12 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="CSS/style.css" />
   </head>
   <body>
     <header>
       <nav>
-        <a href="./index.html">WebStudio</a>
+        <a href="./index.html" class="logo"
+          ><span class="logo-web">Web</span>Studio</a
+        >
         <ul>
           <li><a href="./index.html">Студія</a></li>
           <li><a href="./portfolio.html">Портфоліо</a></li>
@@ -25,11 +33,11 @@
     <main>
       <section>
         <h1>Ефективні рішення для вашого бізнесу</h1>
-        <button type="button">Замовити послугу</button>
+        <button class="place-order" type="button">Замовити послугу</button>
       </section>
       <section>
         <h2>Наші перваги</h2>
-        <ul>
+        <ul class="benefits">
           <li>
             <h3>Увага до деталей</h3>
             <p>
@@ -87,7 +95,7 @@
       </section>
       <section>
         <h2>Наша команда</h2>
-        <ul>
+        <ul class="team">
           <li>
             <img
               src="images/igor_demyanenko.jpg"
@@ -129,7 +137,9 @@
     </main>
 
     <footer>
-      <a href="./index.html">WebStudio</a>
+      <a href="./index.html" class="logo-bot"
+        ><span class="logo-web">Web</span>Studio</a
+      >
       <address>
         <ul>
           <li>
@@ -140,7 +150,7 @@
             >
           </li>
           <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+380961111111"></a>+38 096 111 11 11</li>
+          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
       </address>
     </footer>
