--- a/portfolio.html
+++ b/portfolio.html
@@ -5,12 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="CSS/style.css" />
   </head>
   <body>
     <header>
       <nav>
-        <a href="./index.html">WebStudio</a>
+        <a href="./index.html" class="logo"
+          ><span class="logo-web">Web</span>Studio</a
+        >
         <ul>
           <li><a href="./index.html">Студія</a></li>
           <li><a href="./portfolio.html">Портфоліо</a></li>
@@ -25,18 +33,18 @@
 
     <main>
       <section>
-        <h2>Наші роботи</h2>
-        <ul>
+        <h1>Наші роботи</h1>
+        <ul class="filter">
           <li><button type="button">Усі</button></li>
           <li><button type="button">Веб-сайти</button></li>
           <li><button type="button">Додатки</button></li>
           <li><button type="button">Дизайн</button></li>
           <li><button type="button">Маркетинг</button></li>
         </ul>
-        <ul>
+        <ul class="portfolio-works">
           <li>
             <img src="images/tekhnocrack.jpg" alt="Ноутбук" width="370" />
-            <h3>Технокряк</h3>
+            <h2>Технокряк</h2>
             <p>Веб-сайт</p>
           </li>
           <li>
@@ -45,22 +53,22 @@
               alt="Два баскетболіста"
               width="370"
             />
-            <h3>Постер New Orlean vs Golden Star</h3>
+            <h2>Постер New Orlean vs Golden Star</h2>
             <p>Дизайн</p>
           </li>
           <li>
             <img src="images/Seafood.jpg" alt="Риба і надпис" width="370" />
-            <h3>Ресторан Seafood</h3>
+            <h2>Ресторан Seafood</h2>
             <p>Додаток</p>
           </li>
           <li>
             <img src="images/Prime.jpg" alt="Навушники" width="370" />
-            <h3>Проєкт Prime</h3>
+            <h2>Проєкт Prime</h2>
             <p>Маркетинг</p>
           </li>
           <li>
             <img src="images/Boxes.jpg" alt="Дві коробки" width="370" />
-            <h3>Проєкт Boxes</h3>
+            <h2>Проєкт Boxes</h2>
             <p>Додаток</p>
           </li>
           <li>
@@ -69,7 +77,7 @@
               alt="Монітор"
               width="370"
             />
-            <h3>Inspiration has no Borders</h3>
+            <h2>Inspiration has no Borders</h2>
             <p>Веб-сайт</p>
           </li>
           <li>
@@ -78,12 +86,12 @@
               alt="Розгорнута книга"
               width="370"
             />
-            <h3>Видання Limited Edition</h3>
+            <h2>Видання Limited Edition</h2>
             <p>Дизайн</p>
           </li>
           <li>
             <img src="images/LAB.jpg" alt="Бірка з написом" width="370" />
-            <h3>Проєкт LAB</h3>
+            <h2>Проєкт LAB</h2>
             <p>Маркетинг</p>
           </li>
           <li>
@@ -92,7 +100,7 @@
               alt="Робота за ноутбуком"
               width="370"
             />
-            <h3>Growing Business</h3>
+            <h2>Growing Business</h2>
             <p>Додаток</p>
           </li>
         </ul>
@@ -100,7 +108,9 @@
     </main>
 
     <footer>
-      <a href="./index.html">WebStudio</a>
+      <a href="./index.html" class="logo-bot"
+        ><span class="logo-web">Web</span>Studio</a
+      >
       <address>
         <ul>
           <li>
