--- a/index.html
+++ b/index.html
@@ -15,52 +15,60 @@
   </head>
   <body>
     <header>
-      <nav>
+      <nav class="nav-link">
         <a href="./index.html" class="logo"
           ><span class="logo-web">Web</span>Studio</a
         >
-        <ul>
-          <li><a href="./index.html">Студія</a></li>
-          <li><a href="./portfolio.html">Портфоліо</a></li>
-          <li><a href="#">Контакти</a></li>
+        <ul class="site-nav">
+          <li><a href="./index.html" class="nav-link">Студія</a></li>
+          <li><a href="./portfolio.html" class="nav-link">Портфоліо</a></li>
+          <li><a href="#" class="nav-link">Контакти</a></li>
         </ul>
       </nav>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      <ul class="contacts">
+        <li>
+          <a href="mailto:info@devstudio.com" class="nav-link contact"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li>
+          <a href="tel:+380961111111" class="nav-link contact"
+            >+38 096 111 11 11</a
+          >
+        </li>
       </ul>
     </header>
     <main>
-      <section>
-        <h1>Ефективні рішення для вашого бізнесу</h1>
+      <section class="hat">
+        <h1 class="hat-header">Ефективні рішення для вашого бізнесу</h1>
         <button class="place-order" type="button">Замовити послугу</button>
       </section>
       <section>
-        <h2>Наші перваги</h2>
+        <h2 class="header-second">Наші перваги</h2>
         <ul class="benefits">
           <li>
-            <h3>Увага до деталей</h3>
-            <p>
+            <h3 class="benefits-header">Увага до деталей</h3>
+            <p class="benefits-text">
               Ідейні міркування, і навіть початок повсякденної роботи з
               формування позиції.
             </p>
           </li>
           <li>
-            <h3>Пунктуальність</h3>
-            <p>
+            <h3 class="benefits-header">Пунктуальність</h3>
+            <p class="benefits-text">
               Завдання організації, особливо рамки і місце навчання кадрів тягне
               у себе.
             </p>
           </li>
           <li>
-            <h3>Планування</h3>
-            <p>
+            <h3 class="benefits-header">Планування</h3>
+            <p class="benefits-text">
               Так само консультація з широким активом значною мірою зумовлює.
             </p>
           </li>
           <li>
-            <h3>Сучасні технології</h3>
-            <p>
+            <h3 class="benefits-header">Сучасні технології</h3>
+            <p class="benefits-text">
               Значимість цих проблем настільки очевидна, що реалізація планових
               завдань.
             </p>
@@ -68,7 +76,7 @@
         </ul>
       </section>
       <section>
-        <h2>Чим ми займаємося</h2>
+        <h2 class="header-second">Чим ми займаємося</h2>
         <ul>
           <li>
             <img
@@ -93,8 +101,8 @@
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Наша команда</h2>
+      <section class="team-section">
+        <h2 class="header-second">Наша команда</h2>
         <ul class="team">
           <li>
             <img
@@ -102,8 +110,10 @@
               alt="Фото Ігора Демяненка"
               width="270"
             />
-            <h3>Ігор Дем'яненко</h3>
-            <p>Product Designer</p>
+            <div class="team-description">
+              <h3 class="team-header">Ігор Дем'яненко</h3>
+              <p class="team-text">Product Designer</p>
+            </div>
           </li>
           <li>
             <img
@@ -111,8 +121,10 @@
               alt="Фото Ольги Рєпіної"
               width="270"
             />
-            <h3>Ольга Рєпіна</h3>
-            <p>Frontend Developer</p>
+            <div class="team-description">
+              <h3 class="team-header">Ольга Рєпіна</h3>
+              <p class="team-text">Frontend Developer</p>
+            </div>
           </li>
           <li>
             <img
@@ -120,8 +132,10 @@
               alt="Фото Миколи Тарасоа"
               width="270"
             />
-            <h3>Микола Тарасов</h3>
-            <p>Marketing</p>
+            <div class="team-description">
+              <h3 class="team-header">Микола Тарасов</h3>
+              <p class="team-text">Marketing</p>
+            </div>
           </li>
           <li>
             <img
@@ -129,8 +143,10 @@
               alt="Фото Михайла Єрмакова"
               width="270"
             />
-            <h3>Михайло Єрмаков</h3>
-            <p>UI Designer</p>
+            <div class="team-description">
+              <h3 class="team-header">Михайло Єрмаков</h3>
+              <p class="team-text">UI Designer</p>
+            </div>
           </li>
         </ul>
       </section>
@@ -144,13 +160,22 @@
         <ul>
           <li>
             <a
+              class="adres address-link"
               href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB%D1%8C%D0%B2%D0%B0%D1%80+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/@50.4265807,30.5383858,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
               target="_blank"
               >м. Київ, пр-т Лесі Українки, 26</a
             >
           </li>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+          <li>
+            <a href="mailto:info@devstudio.com" class="address-link"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a href="tel:+380961111111" class="address-link"
+              >+38 096 111 11 11</a
+            >
+          </li>
         </ul>
       </address>
     </footer>
