--- a/portfolio.html
+++ b/portfolio.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -15,19 +15,27 @@
   </head>
   <body>
     <header>
-      <nav>
+      <nav class="nav-link">
         <a href="./index.html" class="logo"
           ><span class="logo-web">Web</span>Studio</a
         >
-        <ul>
-          <li><a href="./index.html">Студія</a></li>
-          <li><a href="./portfolio.html">Портфоліо</a></li>
-          <li><a href="#">Контакти</a></li>
+        <ul class="site-nav">
+          <li><a href="./index.html" class="nav-link">Студія</a></li>
+          <li><a href="./portfolio.html" class="nav-link">Портфоліо</a></li>
+          <li><a href="#" class="nav-link">Контакти</a></li>
         </ul>
       </nav>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      <ul class="contacts">
+        <li>
+          <a href="mailto:info@devstudio.com" class="nav-link contact"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li>
+          <a href="tel:+380961111111" class="nav-link contact"
+            >+38 096 111 11 11</a
+          >
+        </li>
       </ul>
     </header>
 
@@ -35,17 +43,21 @@
       <section>
         <h1>Наші роботи</h1>
         <ul class="filter">
-          <li><button type="button">Усі</button></li>
-          <li><button type="button">Веб-сайти</button></li>
-          <li><button type="button">Додатки</button></li>
-          <li><button type="button">Дизайн</button></li>
-          <li><button type="button">Маркетинг</button></li>
+          <li><button type="button" class="filter-button">Усі</button></li>
+          <li>
+            <button type="button" class="filter-button">Веб-сайти</button>
+          </li>
+          <li><button type="button" class="filter-button">Додатки</button></li>
+          <li><button type="button" class="filter-button">Дизайн</button></li>
+          <li>
+            <button type="button" class="filter-button">Маркетинг</button>
+          </li>
         </ul>
         <ul class="portfolio-works">
           <li>
             <img src="images/tekhnocrack.jpg" alt="Ноутбук" width="370" />
-            <h2>Технокряк</h2>
-            <p>Веб-сайт</p>
+            <h2 class="portfolio-works-header">Технокряк</h2>
+            <p class="portfolio-works-text">Веб-сайт</p>
           </li>
           <li>
             <img
@@ -53,23 +65,25 @@
               alt="Два баскетболіста"
               width="370"
             />
-            <h2>Постер New Orlean vs Golden Star</h2>
-            <p>Дизайн</p>
+            <h2 class="portfolio-works-header">
+              Постер New Orlean vs Golden Star
+            </h2>
+            <p class="portfolio-works-text">Дизайн</p>
           </li>
           <li>
             <img src="images/Seafood.jpg" alt="Риба і надпис" width="370" />
-            <h2>Ресторан Seafood</h2>
-            <p>Додаток</p>
+            <h2 class="portfolio-works-header">Ресторан Seafood</h2>
+            <p class="portfolio-works-text">Додаток</p>
           </li>
           <li>
             <img src="images/Prime.jpg" alt="Навушники" width="370" />
-            <h2>Проєкт Prime</h2>
-            <p>Маркетинг</p>
+            <h2 class="portfolio-works-header">Проєкт Prime</h2>
+            <p class="portfolio-works-text">Маркетинг</p>
           </li>
           <li>
             <img src="images/Boxes.jpg" alt="Дві коробки" width="370" />
-            <h2>Проєкт Boxes</h2>
-            <p>Додаток</p>
+            <h2 class="portfolio-works-header">Проєкт Boxes</h2>
+            <p class="portfolio-works-text">Додаток</p>
           </li>
           <li>
             <img
@@ -77,8 +91,8 @@
               alt="Монітор"
               width="370"
             />
-            <h2>Inspiration has no Borders</h2>
-            <p>Веб-сайт</p>
+            <h2 class="portfolio-works-header">Inspiration has no Borders</h2>
+            <p class="portfolio-works-text">Веб-сайт</p>
           </li>
           <li>
             <img
@@ -86,13 +100,13 @@
               alt="Розгорнута книга"
               width="370"
             />
-            <h2>Видання Limited Edition</h2>
-            <p>Дизайн</p>
+            <h2 class="portfolio-works-header">Видання Limited Edition</h2>
+            <p class="portfolio-works-text">Дизайн</p>
           </li>
           <li>
             <img src="images/LAB.jpg" alt="Бірка з написом" width="370" />
-            <h2>Проєкт LAB</h2>
-            <p>Маркетинг</p>
+            <h2 class="portfolio-works-header">Проєкт LAB</h2>
+            <p class="portfolio-works-text">Маркетинг</p>
           </li>
           <li>
             <img
@@ -100,8 +114,8 @@
               alt="Робота за ноутбуком"
               width="370"
             />
-            <h2>Growing Business</h2>
-            <p>Додаток</p>
+            <h2 class="portfolio-works-header">Growing Business</h2>
+            <p class="portfolio-works-text">Додаток</p>
           </li>
         </ul>
       </section>
@@ -115,13 +129,22 @@
         <ul>
           <li>
             <a
+              class="adres address-link"
               href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB%D1%8C%D0%B2%D0%B0%D1%80+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/@50.4265807,30.5383858,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
               target="_blank"
               >м. Київ, пр-т Лесі Українки, 26</a
             >
           </li>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+380961111111"></a>+38 096 111 11 11</li>
+          <li>
+            <a href="mailto:info@devstudio.com" class="address-link"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a href="tel:+380961111111" class="address-link"
+              >+38 096 111 11 11</a
+            >
+          </li>
         </ul>
       </address>
     </footer>
